--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
     <meta name="description" content="Burrito is the leading NFT Marketplace on Ethereum. Home to the next generation of digital creators. Discover the best and latest Ethereum NFT collections.">
     <title>Burrito | NFT Marketplace</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- div for entire card body -->
